corrected typo in html header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
       <div class="quizbody">
         <h2 id="questionhead"></h2>
-        <ul class ="questionstext">  Welcome to the wizard coding quiz. You will lose time for each wrong answer you select. before the timer runs out and you win! <br> <br> <br> <br> Prepare to be quizzard blasted!
+        <ul class ="questionstext">  Welcome to the wizard coding quiz. You will lose time for each wrong answer you select. Finish before the timer runs out and you win! <br> <br> <br> <br> Prepare to be quizzard blasted!
 
           <li class="question1">Common data types do not include:</li>
           <li class="question1">Strings</li>
